--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,14 +2,26 @@
     margin: 0px;
     padding: 0px;
 }
-.mainIndex{
+.mainJuegos{
     background: linear-gradient(to bottom,#336B87,#90AFC5);
     text-align: center;
+    .tituloJuegos{
+     text-decoration: underline;
+    }
 }
-.fotoStart{
-    width: 650px;
+.fotoTateti{
+    width: 350px;
+    margin: 150px 60px 400px 60px;
+    border-radius: 10%;
 }
-.fotoStart:hover{
-    filter: saturate(175%);
-    transform:scale(1.1, 1.1);
+.fotoTateti:hover{
+    transform:scale(0.9, 0.9);
+}
+.fotoPalabras{
+    width: 232px;
+    margin: 150px 60px 400px 100px;
+    border-radius: 10%;
+}
+.fotoPalabras:hover{
+    transform:scale(0.9, 0.9);
 }
